--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Pint==0.7.2
 pyserial==3.5
 customtkinter>=5.2.0
-RPi.GPIO>=0.7.0; platform_machine=="armv7l" or platform_machine=="aarch64"
+gpiozero>=1.6.0; platform_machine=="armv7l" or platform_machine=="aarch64"
